# watermarkremovertool

./: .gitignore  API.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  FILE_STRUCTURE.md  GETTING_STARTED.md  INDEX.md  QUICKSTART.md  README.md  docker-compose.yml  vercel.json
backend/: Dockerfile  main.py  processor.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  utils.py
frontend/: .eslintrc.json  Dockerfile.dev  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: CanvasSelector.css  CanvasSelector.jsx  DownloadPanel.css  DownloadPanel.jsx  PreviewPanel.css  PreviewPanel.jsx  ProgressBar.css  ProgressBar.jsx  UploadZone.css  UploadZone.jsx
