[project]
name = "watermark-remover"
version = "1.0.0"
description = "Free video watermark removal web application"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py", "processor.py", "utils.py"]
